--- a/app/src/main/res/layout/fragment_recommand.xml
+++ b/app/src/main/res/layout/fragment_recommand.xml
@@ -3,11 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:textSize="30dp"
-        android:text="推荐"/>
+
+    <android.support.v7.widget.RecyclerView
+         android:id="@+id/recommen_list"
+         android:layout_width="match_parent"
+         android:overScrollMode="never"
+         android:background="#fff4f4f4"
+         android:layout_height="match_parent"/>
+
 
 </RelativeLayout>
