--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white"
+    android:background="#fff4f4f4"
     >
 
     <ImageView
@@ -12,6 +12,72 @@
         android:layout_height="150dp"
         android:scaleType="fitXY"
         />
+
+    <RelativeLayout
+        android:id="@+id/subscription_container"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/iv_large_color"
+        android:background="@color/color_white">
+
+        <TextView
+            android:layout_width="75dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="14dp"
+            android:background="@drawable/shape_subscriptoin_bg"
+            android:gravity="center"
+            android:text="+ 订阅"
+            android:textColor="@color/color_white"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/play_control_container"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_below="@id/subscription_container"
+        android:background="#EBE8E8">
+
+        <ImageView
+            android:id="@+id/detail_play_control"
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/play_icon"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/detail_play_control"
+            android:textSize="18sp"
+            android:text="继续播放"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toLeftOf="@+id/detail_arrow"
+            android:text="选集"
+            android:textSize="18sp"
+            android:layout_marginRight="4dp"
+            />
+        <ImageView
+            android:id="@+id/detail_arrow"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:src="@mipmap/arrow_icon"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="18dp"
+            android:layout_alignParentRight="true"
+            />
+
+
+    </RelativeLayout>
 
     <com.glandroid.himalaya.views.RoundImageView
         android:id="@+id/riv_small_color"
@@ -41,15 +107,24 @@
             android:layout_height="wrap_content"
             android:text="这是标题"
             android:textSize="18sp"/>
-
         <TextView
             android:id="@+id/tv_album_author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="作者"
             android:layout_marginTop="10dp"
-            android:text="这是标题"
-            android:textSize="12sp"/>
+            android:textSize="16sp"/>
+
+
 
 
     </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/album_detail_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff4f4f4"
+        android:layout_below="@+id/play_control_container"/>
+
+
 </RelativeLayout>
