--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="main_color">#FA7254</color>
     <color name="color_white">#FFFFFF</color>
+    <color name="sub_text_title">#979797</color>
 </resources>
