--- a/app/src/main/res/layout/item_detail_layout.xml
+++ b/app/src/main/res/layout/item_detail_layout.xml
@@ -2,15 +2,18 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@drawable/shape_album_item_bg"
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/order_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:padding="18dp"
         android:layout_centerVertical="true"
         android:text="0"
-        android:textSize="26sp"/>
+        android:textSize="22sp"/>
     <LinearLayout
         android:layout_toRightOf="@+id/order_text"
         android:layout_centerVertical="true"
@@ -18,25 +21,29 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/detail_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="我是大标题我是大标题我是大标题我是大标题我是大标题我是大标题我是大标题"
-            android:layout_marginRight="100dp"
+            android:layout_marginRight="10dp"
             android:maxLines="1"
             android:ellipsize="end"
-            android:textSize="22sp"/>
+            android:textColor="#000000"
+            android:textSize="16sp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/detail_item_play_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#979797"
             android:text="14.4万"
            />
         <TextView
+            android:id="@+id/detail_item_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#979797"
@@ -48,11 +55,14 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/detail_item_update_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
         android:text="2018-11-22"
+        android:textSize="12dp"
+        android:layout_marginBottom="10dp"
         android:layout_marginRight="20dp"
         />
 
