--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -49,12 +49,12 @@
                 android:textSize="16sp"/>
 
             <SeekBar
+                android:id="@+id/track_seek_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:max="100"
                 />
 
             <TextView
@@ -95,6 +95,7 @@
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:src="@mipmap/play"
+                android:id="@+id/play_or_pause_btn"
                 android:layout_weight="1"/>
 
             <ImageView
