实现四中播放模式以及pop的动画效果

--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -81,6 +81,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/player_mode_switch_btn"
                 android:layout_width="0dp"
                 android:layout_height="20dp"
                 android:src="@mipmap/sort_decending"
@@ -107,6 +108,7 @@
                 android:src="@mipmap/next_press"
                 android:layout_weight="1"/>
             <ImageView
+                android:id="@+id/player_list"
             android:layout_width="0dp"
             android:layout_height="20dp"
             android:src="@mipmap/play_icon_list_press"
