--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@color/main_color"
+        android:background="@color/second_color"
         android:orientation="horizontal">
 
         <net.lucode.hackware.magicindicator.MagicIndicator
