--- a/app/src/main/res/layout/pop_play_list.xml
+++ b/app/src/main/res/layout/pop_play_list.xml
@@ -3,11 +3,60 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:background="@drawable/shape_play_list_bg"
-              android:orientation="vertical">
+              android:orientation="vertical"
+    >
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/play_list_controller_container"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        >
+
+        <LinearLayout
+            android:id="@+id/play_list_play_mode_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/play_list_play_mode_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@mipmap/play_mode_list_order"
+                />
+
+            <TextView
+                android:id="@+id/play_list_play_mode_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/second_color"
+                android:layout_marginLeft="6dp"
+                android:text="顺序播放"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/play_list_rv"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        />
+        android:layout_below="@+id/play_list_controller_container"/>
+
+    <TextView
+        android:id="@+id/play_list_close_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/play_list_controller_container"
+        android:gravity="center"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:text="关闭"
+        android:textColor="@color/black"
+        android:textSize="18sp"/>
 
 </LinearLayout>
