--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="main_color">#FA7254</color>
+    <color name="second_color">#FA7254</color>
     <color name="color_white">#FFFFFF</color>
     <color name="sub_text_title">#979797</color>
+    <color name="play_list_line_color">#ECEEF0</color>
+    <color name="black">#000000</color>
+    <color name="play_list_text_color">#7D828C</color>
 </resources>
