--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/main_color</item>
-        <item name="colorPrimaryDark">@color/main_color</item>
-        <item name="colorAccent">@color/main_color</item>
+        <item name="colorPrimary">@color/second_color</item>
+        <item name="colorPrimaryDark">@color/second_color</item>
+        <item name="colorAccent">@color/second_color</item>
     </style>
     <style name="pop_animation" parent="android:Animation">
         <item name="android:windowEnterAnimation">@anim/pop_in</item>
