播放顺逆序，以及控制面板的播放状态

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -42,19 +42,21 @@
 
         <ImageView
             android:id="@+id/detail_play_control"
-            android:layout_width="19dp"
-            android:layout_height="19dp"
+            android:layout_width="39dp"
+            android:layout_height="39dp"
+            android:padding="10dp"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
-            android:src="@mipmap/play_icon"
+            android:src="@mipmap/play_normal"
             />
 
         <TextView
+            android:id="@+id/play_control_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/detail_play_control"
             android:textSize="18sp"
+            android:layout_marginLeft="2dp"
             android:text="继续播放"
             />
         <TextView
