--- a/app/src/main/res/layout/pop_play_list.xml
+++ b/app/src/main/res/layout/pop_play_list.xml
@@ -6,15 +6,15 @@
               android:orientation="vertical"
     >
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/play_list_controller_container"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        >
+        android:gravity="center_vertical">
+
 
         <LinearLayout
+
             android:id="@+id/play_list_play_mode_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,14 +32,39 @@
                 android:id="@+id/play_list_play_mode_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/second_color"
                 android:layout_marginLeft="6dp"
                 android:text="顺序播放"
+                android:textColor="@color/second_color"
                 android:textSize="16sp"/>
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/play_list_order_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:orientation="horizontal"
+            >
 
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/play_list_order_iv"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@mipmap/play_mode_list_order"/>
+
+            <TextView
+                android:id="@+id/play_list_order_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="6dp"
+                android:text="顺序"
+                android:textColor="@color/second_color"
+                android:textSize="16sp"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/play_list_rv"
