--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -6,7 +6,6 @@
     >
 
     <LinearLayout
-        android:id="@+id/main_title_bar"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/second_color"
@@ -36,16 +35,13 @@
         android:id="@+id/content_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/main_bottom_contianer"
-        android:layout_below="@+id/main_title_bar"
         android:overScrollMode="never"/>
 
     <LinearLayout
-        android:id="@+id/main_bottom_contianer"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:background="#dfdfdf"
+        android:background="@color/color_white"
         android:orientation="horizontal"
         android:gravity="center_vertical"
         >
@@ -81,7 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="作者名称"
-                android:textColor="#7f7f7f"
+                android:textColor="#9d9d9d"
                 android:textSize="14sp"/>
         </LinearLayout>
 
