--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -44,7 +44,10 @@
             android:id="@+id/detail_play_control"
             android:layout_width="39dp"
             android:layout_height="39dp"
-            android:padding="10dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="5dp"
             android:layout_centerVertical="true"
             android:src="@mipmap/play_normal"
             />
@@ -57,7 +60,11 @@
             android:layout_toRightOf="@+id/detail_play_control"
             android:textSize="18sp"
             android:layout_marginLeft="2dp"
-            android:text="继续播放"
+            android:singleLine="true"
+            android:layout_marginRight="140dp"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:text="@string/click_play_tips_text"
             />
         <TextView
             android:layout_width="wrap_content"
